K8S/agents-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api

spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        environment: production
        app: api
    spec:
      containers:
        - name: api
          image: extiriority/agentservice:latest
          ports:
            - containerPort: 80
---
# Path: K8S\agents-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service

spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
