K8S/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: ica.mayawinterfox.com
      http:
        paths:
          - path: /(api/agents/?.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: agents-api-srv
                port:
                  number: 80
